# paperika

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
deploy/: paperika-bridge.service  paperika-chrome.service  paperika-xvfb.service
docs/: bridge_contracts.md  e2e-notes.md  paprika-vibes.md
scripts/: bootstrap_runtime.sh  hermes_download.sh  hermes_locate.sh  hermes_retry_worker.sh
src/paperika/: __init__.py  cli.py  config.py  db.py  downloader.py  locator.py  models.py  normalize.py  notifications.py  retry.py  runtime_check.py  staggered.py  worker.py
src/paperika/bridge/: __init__.py  app.py  chrome.py  direct_fetch.py  executor.py  limits.py  scripted_browser.py
tests/: test_bridge.py  test_config_db.py  test_dedupe.py  test_direct_fetch.py  test_downloader_logic.py  test_limits_per_strategy.py  test_normalize.py  test_notifications.py  test_retry.py  test_runtime_check.py  test_scripted_browser.py  test_staggered.py  test_worker.py
