[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperika"
version = "0.1.0"
description = "Standalone MVP for paper discovery and local Chrome-assisted downloading"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Agastya"}
]
dependencies = [
  "requests>=2.31,<3",
  "playwright>=1.44,<2",
  # AGA-260: institutional-download bridge (FastAPI service in src/paperika/bridge).
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
paperika = "paperika.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
